--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^2.48.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "lucide-react": "^0.474.0",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
     "next-swagger-doc": "^0.4.1",
