--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.3.0",
     "@supabase/supabase-js": "^2.48.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "lucide-react": "^0.474.0",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
-    "next-swagger-doc": "^0.4.1",
+    "next-swagger-doc": "^0.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swagger-ui-react": "^5.18.2",
@@ -31,6 +32,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
+    "prisma": "^6.3.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
