--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^6.3.0",
     "@supabase/supabase-js": "^2.48.0",
+    "argon2": "^0.41.1",
     "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
     "lucide-react": "^0.474.0",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
@@ -26,7 +25,6 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
