--- a/package.json
+++ b/package.json
@@ -4,23 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^6.3.0",
-    "@supabase/supabase-js": "^2.48.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "better-auth": "^1.1.15",
     "lucide-react": "^0.474.0",
     "next": "15.1.4",
-    "next-auth": "^5.0.0-beta.25",
-    "next-swagger-doc": "^0.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "swagger-ui-react": "^5.18.2",
-    "uuid": "^11.0.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -29,7 +25,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/swagger-ui-react": "^4.18.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
