--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "better-auth": "^1.1.15",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.474.0",
     "next": "15.1.4",
     "react": "^19.0.0",
