--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "better-auth": "^1.1.15",
     "dayjs": "^1.11.13",
+    "jose": "^5.9.6",
     "lucide-react": "^0.474.0",
     "next": "15.1.4",
     "react": "^19.0.0",
