--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.3.0",
+    "@tanstack/react-table": "^8.20.6",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "better-auth": "^1.1.15",
@@ -19,6 +21,7 @@
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-toastify": "^11.0.3",
     "zod": "^3.24.1"
   },
