--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@lexical/list": "^0.23.1",
+    "@lexical/react": "^0.23.1",
+    "@lexical/rich-text": "^0.23.1",
+    "@lexical/selection": "^0.23.1",
+    "@lexical/utils": "^0.23.1",
     "@prisma/client": "^6.3.0",
     "@tanstack/react-table": "^8.20.6",
     "axios": "^1.7.9",
@@ -17,6 +22,7 @@
     "better-auth": "^1.1.15",
     "dayjs": "^1.11.13",
     "jose": "^5.9.6",
+    "lexical": "^0.23.1",
     "lucide-react": "^0.474.0",
     "next": "15.1.4",
     "react": "^19.0.0",
