--- a/package.json
+++ b/package.json
@@ -20,16 +20,21 @@
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "better-auth": "^1.1.15",
+    "bull": "^4.16.5",
     "dayjs": "^1.11.13",
+    "ioredis": "^5.5.0",
     "jose": "^5.9.6",
     "lexical": "^0.23.1",
     "lucide-react": "^0.474.0",
     "next": "15.1.4",
     "nodemailer": "^6.10.0",
+    "prom-client": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-toastify": "^11.0.3",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
