Update dependencies and environment configuration for NextAuth and authentication

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
-# Supabase
-DATABASE_URL=""
+# Google
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+
+# NextAuth
+NEXTAUTH_URL=""
+NEXTAUTH_SECRET="" # Added by `npx auth`. Read more: https://cli.authjs.dev
+
+# Database
+DATABASE_URL=""        
 
 # Redis
 REDIS_HOST=""
