--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@prisma/client": "^6.3.0",
     "@tanstack/react-table": "^8.20.6",
     "axios": "^1.7.9",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "better-auth": "^1.1.15",
     "bull": "^4.16.5",
     "dayjs": "^1.11.13",
@@ -27,6 +27,7 @@
     "lexical": "^0.23.1",
     "lucide-react": "^0.474.0",
     "next": "15.1.4",
+    "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
     "prom-client": "^15.1.3",
     "react": "^19.0.0",
@@ -39,7 +40,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/bcryptjs": "^2.4.6",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
