Add MinIO configuration to .env.example, enhance user organization management in layout with fetching and switching functionality, and implement API routes for organization switching with role validation.

--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,11 @@ EMAIL_FROM=""
 LINKEDIN_CLIENT_ID=""
 LINKEDIN_CLIENT_SECRET=""
 LINKEDIN_REDIRECT_URI=""
+
+# MinIO Configuration
+MINIO_ENDPOINT=""
+MINIO_PORT=""
+MINIO_ACCESS_KEY=""
+MINIO_SECRET_KEY=""
+MINIO_USE_SSL=""
+MINIO_PUBLIC_URL=""
