--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
     "lint": "next lint",
-    "worker": "pnpm exec ts-node -r tsconfig-paths/register src/worker.ts"
+    "worker": "pnpm exec ts-node -P tsconfig.worker.json -r tsconfig-paths/register src/services/worker.ts"
   },
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
@@ -55,6 +55,9 @@
     "postcss": "^8",
     "prisma": "^6.3.0",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@10.6.4+sha512.da3d715bfd22a9a105e6e8088cfc7826699332ded60c423b14ec613a185f1602206702ff0fe4c438cb15c979081ce4cb02568e364b15174503a63c7a8e2a5f6c"
 }
