--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@prisma/client": "^6.3.0",
     "@tanstack/react-table": "^8.20.6",
     "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "better-auth": "^1.1.15",
     "bull": "^4.16.5",
     "date-fns": "^4.1.0",
