added posthog web analytics

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,7 @@ MINIO_ACCESS_KEY=""
 MINIO_SECRET_KEY=""
 MINIO_USE_SSL=""
 MINIO_PUBLIC_URL=""
+
+# PostHog
+NEXT_PUBLIC_POSTHOG_KEY=""
+NEXT_PUBLIC_POSTHOG_HOST=""
