--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
     "pm2": "^6.0.5",
+    "posthog-js": "^1.232.1",
     "prom-client": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
