✨ feat: add DodoPayments integration and update environment variables in .env.example

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,7 @@ MINIO_PUBLIC_URL=""
 # PostHog
 NEXT_PUBLIC_POSTHOG_KEY=""
 NEXT_PUBLIC_POSTHOG_HOST=""
+
+# DodoPayments
+DODO_PAYMENTS_API_KEY=""
+NEXT_PUBLIC_DODO_WEBHOOK_KEY=""
