--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bull": "^4.16.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "dodopayments": "^1.7.1",
     "ioredis": "^5.5.0",
     "jose": "^5.9.6",
     "lexical": "^0.23.1",
@@ -42,6 +43,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-toastify": "^11.0.3",
+    "standardwebhooks": "^1.0.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.24.1"
