✨ feat: implement scheduler service for managing scheduled posts, including cron job setup and graceful shutdown handling; replace worker script with new scheduler logic

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "start:prod": "next start & pnpm worker",
     "lint": "next lint",
-    "worker": "pnpm exec ts-node -P tsconfig.worker.json -r tsconfig-paths/register src/services/worker.ts"
+    "worker": "pnpm exec ts-node -P tsconfig.worker.json -r tsconfig-paths/register src/workers/scheduler.ts"
   },
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
@@ -24,17 +24,17 @@
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
     "better-auth": "^1.1.15",
-    "bull": "^4.16.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dodopayments": "^1.7.1",
-    "ioredis": "^5.5.0",
+    "i18n-iso-countries": "^7.14.0",
     "jose": "^5.9.6",
     "lexical": "^0.23.1",
     "lucide-react": "^0.474.0",
     "minio": "^8.0.4",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "pm2": "^6.0.5",
     "posthog-js": "^1.232.1",
@@ -42,6 +42,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-international-phone": "^4.5.0",
     "react-toastify": "^11.0.3",
     "standardwebhooks": "^1.0.0",
     "winston": "^3.17.0",
@@ -52,6 +53,7 @@
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
