--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-table": "^8.20.6",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dodopayments": "^1.7.1",
     "i18n-iso-countries": "^7.14.0",
