--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack & pnpm worker",
+    "dev": "next dev --turbopack & pnpm worker:dev",
     "build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
-    "start:prod": "next start & pnpm worker",
+    "start:prod": "next start & pnpm worker:prod",
     "lint": "next lint",
-    "worker": "pnpm exec ts-node -P tsconfig.scheduler.json -r tsconfig-paths/register src/workers/scheduler.ts"
+    "worker:dev": "pnpm exec ts-node -P tsconfig.worker.json -r tsconfig-paths/register src/scripts/run-workers.ts",
+    "worker:prod": "pnpm exec ts-node -P tsconfig.worker.json -r tsconfig-paths/register src/scripts/run-workers.ts"
   },
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
@@ -23,6 +24,7 @@
     "@tanstack/react-table": "^8.20.6",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "cron": "^4.1.3",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dodopayments": "^1.7.1",
@@ -32,7 +34,6 @@
     "minio": "^8.0.4",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
-    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "pm2": "^6.0.5",
     "posthog-js": "^1.232.1",
@@ -51,7 +52,6 @@
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
-    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
