refactor: update DodoPayments webhook key in environment configuration for consistency

--- a/.env.example
+++ b/.env.example
@@ -45,7 +45,7 @@ NEXT_PUBLIC_POSTHOG_HOST=""
 
 # DodoPayments
 DODO_PAYMENTS_API_KEY=""
-NEXT_PUBLIC_DODO_WEBHOOK_KEY=""
+DODO_WEBHOOK_KEY=""
 
 # Google Gemini API Key
 GOOGLE_GEMINI_API_KEY=""
