--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hook-form": "^7.54.2",
     "react-international-phone": "^4.5.0",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.2",
     "standardwebhooks": "^1.0.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
