--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
+    "@google/genai": "^0.12.0",
     "@hookform/resolvers": "^3.10.0",
     "@lexical/list": "^0.23.1",
     "@lexical/react": "^0.23.1",
