--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-table": "^8.20.6",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "crisp-sdk-web": "^1.0.25",
     "cron": "^4.1.3",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
